--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,9 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:text="MP3 Player"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,117 +17,115 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card1"
+        android:id="@+id/materialCardView"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_margin="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="350dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="110dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:cardCornerRadius="15dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="365dp"
+            android:layout_height="352dp"
             android:scaleType="fitXY"
-            app:srcCompat="@drawable/img" />
+            app:srcCompat="@drawable/img"></ImageView>
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:cardCornerRadius="15dp"
-        android:layout_margin="20dp"
+        android:layout_height="180dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card1"
-        app:cardElevation="20dp">
+        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
+        app:cardElevation="30dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/songNameView"
+                android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:text="Paradox Music Video"
-                android:textSize="20dp"
-                android:textStyle="bold"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:text="see you again"
+                android:textSize="25dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/shuffleBtn"
+                android:id="@+id/startButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
-                app:fabSize="mini"
-                app:srcCompat="@drawable/shuffle"
-                android:tintMode="#FFFFFF"
-                android:backgroundTint="#675F5F"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/previousBtn"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/songNameView" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/previousBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
-                app:srcCompat="@drawable/skip_previous"
-                android:tintMode="#FFFFFF"
-                android:backgroundTint="#675F5F"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/playBtn"
-                app:layout_constraintTop_toBottomOf="@+id/songNameView" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/playBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:fabCustomSize="85dp"
+                android:backgroundTint="#EB870B0B"
+                android:src="@drawable/play_arrow"
+                android:tintMode="@color/white"
+                app:fabCustomSize="80dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/songNameView"
-                app:srcCompat="@drawable/play_arrow"
-                android:tintMode="#FFFFFF"
-                android:backgroundTint="#EB870B0B"/>
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/nextBtn"
+                android:id="@+id/floatingActionButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                app:srcCompat="@drawable/skip_next"
-                android:tintMode="#FFFFFF"
-                android:backgroundTint="#675F5F"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/skip_previous"
+                android:tintMode="@color/white"
+                app:backgroundTint="#3f3a37"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/playBtn"
-                app:layout_constraintTop_toBottomOf="@+id/songNameView" />
+                app:layout_constraintEnd_toStartOf="@+id/startButton"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/stopBtn"
+                android:id="@+id/floatingActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="25dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/shuffle"
+                android:tintMode="@color/white"
+                app:backgroundTint="#3f3a37"
                 app:fabSize="mini"
-                app:srcCompat="@drawable/stop"
-                android:tintMode="#FFFFFF"
-                android:backgroundTint="#675F5F"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/nextBtn"
-                app:layout_constraintTop_toBottomOf="@+id/songNameView" />
+                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/floatingActionButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/skip_next"
+                android:tintMode="@color/white"
+                app:backgroundTint="#3f3a37"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/startButton"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/stopButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/stop"
+                android:tintMode="@color/white"
+                app:backgroundTint="#3f3a37"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/floatingActionButton4"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </com.google.android.material.card.MaterialCardView>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
